<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/home"
            android:iconTint="@color/colorAccent"
            android:title="@string/Home" />

        <item
            android:id="@+id/bookmarks"
            android:checked="false"
            android:icon="@drawable/bookmark"
            android:iconTint="@color/colorAccent"
            android:title="@string/Bookmarks" />

        <item
            android:id="@+id/aboutus"
            android:checked="false"
            android:icon="@drawable/aboutus"
            android:iconTint="@color/colorAccent"
            android:title="@string/AboutUs" />
    </group>
</menu>