<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="?attr/colorPrimary"
    tools:context="com.example.utsav.edufind.MainUI">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/EduFind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/newSearchBtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:onClick="goToSearchUI"
        android:text="@string/New_Search"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <Button
        android:id="@+id/bookmarksBtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:onClick="goToBookmarksUI"
        android:text="@string/Bookmarks"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSearchBtn" />

    <Button
        android:id="@+id/button"
        android:theme="@style/whiteBtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmarksBtn"
        android:text="Search results"
        android:onClick="goToSearchResultsUI"
        android:layout_marginTop="127dp"
        app:layout_constraintHorizontal_bias="0.496" />
</android.support.constraint.ConstraintLayout>
