<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    android:layout_marginBottom="20dp"
    android:elevation="3dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:paddingTop="15dp"
        android:background="@drawable/relative_background_with_shadow"
        >

        <TextView
            android:id="@+id/date_createdlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Date Created:"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/date_createdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/date_createdlabel"
            android:textSize="16sp"
            android:layout_marginTop="3dp"
            android:text="17/05/2016"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/time_createdlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Date Created:"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/time_createdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/date_createdlabel"
            android:textSize="16sp"
            android:layout_marginTop="3dp"
            android:text="17/05/2016"
            android:textColor="@color/colorAccent"/>

        <View
            android:id="@+id/view"
            style="@style/Divider"
            android:layout_below="@+id/date_createdlabel"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:background="@drawable/linear_background_with_shadow"
            android:gravity="center">

                <TextView
                    android:id="@+id/aoiLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:width="80dp"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingStart="9dp"
                    android:paddingEnd="20dp"/>
                <TextView
                    android:id="@+id/aoiTV"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Course_Grade_Circle"
                    android:textSize="16sp"
                    android:layout_marginTop="7dp"
                    android:text="@string/L1R4"
                    android:textAlignment="center"
                    android:layout_marginStart="4dp"/>

                <TextView
                    android:id="@+id/specLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:minWidth="80dp"
                    android:maxWidth="200dp"
                    android:layout_marginStart="0dp"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/specTV"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Course_Intake_Circle"
                    android:textSize="16sp"
                    android:layout_marginTop="7dp"
                    android:text="@string/intake"
                    android:textAlignment="center"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/postalLabel"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Course_Website"
                    android:textSize="16sp"
                    android:text="@string/website"
                    android:layout_marginTop="7dp"
                    android:textAlignment="center"
                    android:layout_marginStart="6dp"/>

                <TextView
                    android:id="@+id/postalTV"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Course_Website"
                    android:textSize="16sp"
                    android:text="@string/website"
                    android:layout_marginTop="7dp"
                    android:textAlignment="center"
                    android:layout_marginStart="6dp"/>

            <TextView
                android:id="@+id/L1R4Label"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Course_Website"
                android:textSize="16sp"
                android:text="@string/website"
                android:layout_marginTop="7dp"
                android:textAlignment="center"
                android:layout_marginStart="6dp"/>

            <TextView
                android:id="@+id/L1R4TV"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Course_Website"
                android:textSize="16sp"
                android:text="@string/website"
                android:layout_marginTop="7dp"
                android:textAlignment="center"
                android:layout_marginStart="6dp"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>